Sculpt: Crash when sculpting on Multires #117158

Closed
opened 2024-01-16 05:41:37 +01:00 by TheRedWaxPolice · 5 comments

System Information
Operating system: Win 10

Blender Version
Broken: blender-4.1.0-alpha+main.0f8c8e475a11-windows.amd64-release
Worked: blender-4.1.0-alpha+main.16741e735b1b-windows.amd64-release

Short description of error
Sculpting on a multires crashes blender...

Exact steps for others to reproduce the error

  • Launch Blender
  • Go to Sculpt Mode
  • Add a Multires modifier to the cube and subdivide a few times
  • Perform a brush stroke
  • Boom...

**System Information** Operating system: Win 10 **Blender Version** Broken: blender-4.1.0-alpha+main.0f8c8e475a11-windows.amd64-release Worked: blender-4.1.0-alpha+main.16741e735b1b-windows.amd64-release **Short description of error** Sculpting on a multires crashes blender... **Exact steps for others to reproduce the error** - Launch Blender - Go to Sculpt Mode - Add a Multires modifier to the cube and subdivide a few times - Perform a brush stroke - Boom... <video controls="" src="https://media.discordapp.net/attachments/587761956526751784/1196672756977246240/blender_ZVafDRp7lv.mp4"></video>
TheRedWaxPolice added the
Priority
Normal
Type
Report
Status
Needs Triage
labels 2024-01-16 05:41:37 +01:00
Member

Thanks for the report. Can confirm the crash.

Nice song/music in the background btw ;)

Thanks for the report. Can confirm the crash. Nice song/music in the background btw ;)
Member

Caused by 70d28257e7

Caused by 70d28257e74cff666f6fba51ddc8934806cc593a
Member

Looks like no/fno is nullptr in some cases hence converting floating point -> float3 triggered the crash
Guess we either need to make no-fno to float3 or revert the changes done in frontface() function
@HooglyBoogly ^

Looks like no/fno is nullptr in some cases hence converting floating point -> float3 triggered the crash Guess we either need to make no-fno to float3 or revert the changes done in `frontface()` function @HooglyBoogly ^
Member

Or something like:

 static float frontface(const Brush *br,
                        const float3 &sculpt_normal,
-                       const float3 &no,
-                       const float3 &fno)
+                       const float no[3],
+                       const float fno[3])
 {
   using namespace blender;
   if (!(br->flag & BRUSH_FRONTFACE)) {
@@ -1648,10 +1648,10 @@ static float frontface(const Brush *br,

   float dot;
   if (no) {
-    dot = math::dot(no, sculpt_normal);
+    dot = math::dot((float3)no, sculpt_normal);
   }
   else {
-    dot = math::dot(fno, sculpt_normal);
+    dot = math::dot((float3)fno, sculpt_normal);
   }
   return dot > 0.0f ? dot : 0.0f;
 }
Or something like: ``` static float frontface(const Brush *br, const float3 &sculpt_normal, - const float3 &no, - const float3 &fno) + const float no[3], + const float fno[3]) { using namespace blender; if (!(br->flag & BRUSH_FRONTFACE)) { @@ -1648,10 +1648,10 @@ static float frontface(const Brush *br, float dot; if (no) { - dot = math::dot(no, sculpt_normal); + dot = math::dot((float3)no, sculpt_normal); } else { - dot = math::dot(fno, sculpt_normal); + dot = math::dot((float3)fno, sculpt_normal); } return dot > 0.0f ? dot : 0.0f; } ```
Hans Goudey added
Type
Bug
and removed
Type
Report
labels 2024-01-16 14:52:53 +01:00
Member

Thanks for the report and the investigation!

Thanks for the report and the investigation!
Blender Bot added
Status
Resolved
and removed
Status
Confirmed
labels 2024-01-16 14:55:08 +01:00
Sign in to join this conversation.
No Label
Interest
Alembic
Interest
Animation & Rigging
Interest
Asset Browser
Interest
Asset Browser Project Overview
Interest
Audio
Interest
Automated Testing
Interest
Blender Asset Bundle
Interest
BlendFile
Interest
Collada
Interest
Compatibility
Interest
Compositing
Interest
Core
Interest
Cycles
Interest
Dependency Graph
Interest
Development Management
Interest
EEVEE
Interest
EEVEE & Viewport
Interest
Freestyle
Interest
Geometry Nodes
Interest
Grease Pencil
Interest
ID Management
Interest
Images & Movies
Interest
Import Export
Interest
Line Art
Interest
Masking
Interest
Metal
Interest
Modeling
Interest
Modifiers
Interest
Motion Tracking
Interest
Nodes & Physics
Interest
OpenGL
Interest
Overlay
Interest
Overrides
Interest
Performance
Interest
Physics
Interest
Pipeline, Assets & IO
Interest
Platforms, Builds & Tests
Interest
Python API
Interest
Render & Cycles
Interest
Render Pipeline
Interest
Sculpt, Paint & Texture
Interest
Text Editor
Interest
Translations
Interest
Triaging
Interest
Undo
Interest
USD
Interest
User Interface
Interest
UV Editing
Interest
VFX & Video
Interest
Video Sequencer
Interest
Virtual Reality
Interest
Vulkan
Interest
Wayland
Interest
Workbench
Interest: X11
Legacy
Blender 2.8 Project
Legacy
Milestone 1: Basic, Local Asset Browser
Legacy
OpenGL Error
Meta
Good First Issue
Meta
Papercut
Meta
Retrospective
Meta
Security
Module
Animation & Rigging
Module
Core
Module
Development Management
Module
EEVEE & Viewport
Module
Grease Pencil
Module
Modeling
Module
Nodes & Physics
Module
Pipeline, Assets & IO
Module
Platforms, Builds & Tests
Module
Python API
Module
Render & Cycles
Module
Sculpt, Paint & Texture
Module
Triaging
Module
User Interface
Module
VFX & Video
Platform
FreeBSD
Platform
Linux
Platform
macOS
Platform
Windows
Priority
High
Priority
Low
Priority
Normal
Priority
Unbreak Now!
Status
Archived
Status
Confirmed
Status
Duplicate
Status
Needs Info from Developers
Status
Needs Information from User
Status
Needs Triage
Status
Resolved
Type
Bug
Type
Design
Type
Known Issue
Type
Patch
Type
Report
Type
To Do
No Milestone
No project
No Assignees
3 Participants
Notifications
Due Date
The due date is invalid or out of range. Please use the format 'yyyy-mm-dd'.

No due date set.

Dependencies

No dependencies set.

Reference: blender/blender#117158
No description provided.