Fix #117158: Multires sculpting crash

The change to use `float3` in `frontface` didn't account for the
fact that the values we sometimes null.